# Trabalho_Final_Processamento_de_imagens

./: .gitignore  README.md  main.py  pyproject.toml
classifiers/: mlp_classifier.py  rf_classifier.py  run_all_classifiers.py  svm_classifier.py
dataSplitter/: data_splitting.py
featureExtractors/: orb_FeatureExtraction.py
features_labels/Orb/test/: features.csv
features_labels/Orb/train/: features.csv
tests/: test_classifier.py  test_feature_extractor.py
